@@ -1,5 +1,6 @@
 package frc.robot.robot_manager;
 
+import com.google.common.collect.ImmutableList;
 import edu.wpi.first.wpilibj2.command.Command;
 import edu.wpi.first.wpilibj2.command.Commands;
 import edu.wpi.first.wpilibj2.command.Subsystem;
@@ -13,9 +14,9 @@ public class RobotCommands {
 
   public RobotCommands(RobotManager robot) {
     this.robot = robot;
-    var requirementsList = List.of(robot.elevator, robot.arm, robot.claw, robot.climber);
+    var requirementsList = ImmutableList.of(robot.elevator, robot.arm, robot.claw, robot.climber);
     rmRequirements = requirementsList.toArray(Subsystem[]::new);
-    requirementsList = List.of(robot.groundManager.deploy, robot.groundManager.intake);
+    requirementsList = ImmutableList.of(robot.groundManager.deploy, robot.groundManager.intake);
     gmRequirements = requirementsList.toArray(Subsystem[]::new);
     requirementsList =
         List.of(
